add mobile client neoid auth
